[package]
name = "kyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#axum = "0.6"
dotenv = "0.15"
ethers-etherscan = "2.0.10"
ethers = "2.0.10"
tokio = { version = "1.32", features = ["full"] }
ethers-providers = { version = "2.0", features = ["ipc"] }
